--- a/index.html
+++ b/index.html
@@ -1,81 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- displays site properly based on user's device -->
 
-    <title>
-      Frontend Mentor | Newsletter sign-up form with success message
-    </title>
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet" />
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  </head>
-  <body>
-    <div class="container">
-      <div class="txt">
-        <h1>Stay Updated!</h1>
-        <p>Join 60,000+ product managers receiving monthly updates on:</p>
-        <ul>
-          <li>Product discovery any building what matters</li>
-          <li>Measuring to ensure updates are a succes</li>
-          <li>And much more!</li>
-        </ul>
-        <form action="">
-          <div class="label-container">
-            <label for="email">Email Adress </label>
-            <span class="error-msg">Valid email required</span>
-          </div>
-          <input type="email" placeholder="email@company.com" id="email" />
-          <button type="button">Subscribe to monthly newsletter</button>
-        </form>
-      </div>
-      <div class="img-container">
-        <img
-          src="/assets/images/illustration-sign-up-desktop.svg"
-          alt=""
-          class="desktop-img"
-        />
-        <img
-          src="/assets/images/illustration-sign-up-mobile.svg"
-          alt=""
-          class="mobile-img"
-        />
-      </div>
+  <title>
+    Frontend Mentor | Newsletter sign-up form with success message
+  </title>
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+</head>
+
+<body>
+  <div class="container">
+    <div class="txt">
+      <h1>Stay Updated!</h1>
+      <p>Join 60,000+ product managers receiving monthly updates on:</p>
+      <ul>
+        <li>Product discovery any building what matters</li>
+        <li>Measuring to ensure updates are a succes</li>
+        <li>And much more!</li>
+      </ul>
+      <form action="">
+        <div class="label-container">
+          <label for="email">Email Adress </label>
+          <span class="error-msg">Valid email required</span>
+        </div>
+        <input type="email" placeholder="email@company.com" id="email" />
+        <button type="button">Subscribe to monthly newsletter</button>
+      </form>
     </div>
-
-    <!-- succes alert -->
-    <div class="alert-container">
-      <img src="./assets/images/icon-success.svg" alt="succes" />
-      <h1>Thanks for subscribing!</h1>
-      <p>
-        A confirmation email has been sent to
-        <strong>ash@loremcompany.com</strong>. Please open it and click the
-        button inside to confirm your subscription.
-      </p>
-      <button class="btn-success">Subscribe to monthly newsletter</button>
+    <div class="img-container">
+      <img src="/assets/images/illustration-sign-up-desktop.svg" alt="" class="desktop-img" />
+      <img src="/assets/images/illustration-sign-up-mobile.svg" alt="" class="mobile-img" />
     </div>
-    <script src="script.js"></script>
+  </div>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Fikri Wibowo</a>.
-    </div>
-  </body>
+  <!-- succes alert -->
+  <div class="alert-container">
+    <img src="./assets/images/icon-success.svg" alt="succes" />
+    <h1>Thanks for subscribing!</h1>
+    <p>
+      A confirmation email has been sent to
+      <strong>ash@loremcompany.com</strong>. Please open it and click the
+      button inside to confirm your subscription.
+    </p>
+    <button class="btn-success">Subscribe to monthly newsletter</button>
+  </div>
+
+
+  <div class="attribution">
+    Challenge by
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
+      href="#">Fikri Wibowo</a>.
+  </div>
+
+  <script src="script.js"></script>
+</body>
+
 </html>
